# jogo_da_forca

./: Cargo.toml  README.md
.github/workflows/: build.yml  unit_test_with_coverage.yml
src/: lib.rs  main.rs
src/constants/: attempts.rs  gibbet_phases.rs  mod.rs
src/game/: game.rs  mod.rs
src/logger/: logger.rs
src/player/: mod.rs
src/puppet/: gibbet.rs  mod.rs
src/random_word/: mod.rs  random_word.rs
tests/: game_test.rs
